feat(checkout): implement US-73 - ArticleDataPort Output Port
Implemented by RALPH autonomous loop.

Co-Authored-By: Claude <noreply@anthropic.com>